Modificações SONET/SDH

--- a/app4.tex
+++ b/app4.tex
@@ -1,6 +1,7 @@
 \chapter{Lista de Acrônimos}
 
 \begin{acronym}[RSVP-TE]
+\acro{ADM}{\textit{Add/Drop Multiplexers}}
 \acro{AGC}{\textit{Automatic Gain Control}}
 \acro{ANSI}{\textit{American National Standards Institute}}
 \acro{APC}{\textit{Automatic Power Control}}
@@ -91,6 +92,7 @@
 \acro{Pout}[$P_{out}$]{\textit{Power output}}
 \acro{QoS}{\textit{Quality of Service}}
 \acro{QoT}{\textit{Quality of Transmission}}
+\acro{REG}{Regenerador}
 \acro{RFC}{\textit{Request For Comments}}
 \acro{RS}{Reed-Solomon}
 \acro{RSOH}{\textit{Regenerator Section Overhead}}
@@ -114,6 +116,7 @@
 \acro{TCP}{Transmission Control Protocol}
 \acro{TDM}{\textit{Time Division Multiplexing}}
 \acro{TE}{\textit{Traffic Engineering}}
+\acro{TM}{\textit{Terminal Multiplexers}}
 \acro{TTI}{\textit{Trail Trace Identifier}}
 \acro{TLV}{Type-Length-Value}
 \acro{UFABC}{Universidade Federal do ABC}
