Modificações SONET/SDH

--- a/app4.tex
+++ b/app4.tex
@@ -46,6 +46,7 @@
 \acro{ITU-T}{\textit{International Telecommunication Union -- Telecommunication Standardization Sector}}
 \acro{JC}{\textit{Justification Control}}
 \acro{L2SC}{\textit{Layer 2 Switch Capable}}
+\acro{LED}{\textit{Light-Emitting Diodes}}
 \acro{LMP}{\textit{Link Management Protocol}}
 \acro{LOF}{\textit{Loss Of Frame}}
 \acro{LOM}{\textit{Loss Of Multiframe}}
@@ -55,6 +56,7 @@
 \acro{LSR}{\textit{Label Switch Router}}
 \acro{LSP}{\textit{Label Switched Path}}
 \acro{MFAS}{\textit{Multi-Frame Alignment Signal}}
+\acro{MLM}{\textit{Multilongitudinal Mode Fabry-Perot Laser}}
 \acro{MPLS}{\textit{Multi-Protocol Label Switching}}
 \acro{MSOH}{\textit{Multiplex Section Overhead}}
 \acro{NSFNet}{\textit{National Science Foundation Network}}
@@ -100,6 +102,7 @@
 \acro{RSVP-TE}{\textit{Resource ReSerVation Protocol with Traffic Engineering}}
 \acro{RWA}{\textit{Routing and Wavelength Assignment}}
 %\acro{SI}{Swarm Intelligence}
+\acro{SLM}{\textit{Single Longitudinal Mode Distributed-Feedback Laser}}
 \acro{SM}{\textit{Section Monitoring}}
 \acro{SNR}{\textit{Signal-Noise Ratio}}
 \acro{SAN}{\textit{Storage Area Network}}
