--- a/sectionSonetSDH.tex
+++ b/sectionSonetSDH.tex
@@ -85,7 +85,10 @@ A Camada Física diz respeito a infraestrutura de conexões que permite a transmis
  \label{fig:PhysicalSDH}
 \end{figure}
 
-Na Figura~\ref{fig:PhysicalSDH}, a primeira coluna referencia a taxa de transmissão de acordo com a hierarquia \ac{SDH}. A segunda coluna introduz uma nomenclatura que depende do comprimento do enlace, de acordo com as definições a seguir: \textit{Intraoffice Connections} é representado pela letra "I" e indica distâncias de aproximadamente 2 km; \textit{Short-haul Interoffice Connections}, que indica enlaces de distância de aproximadamente 15 km para o comprimento de onda de 1330 nm e 40 km para 1550 nm, é representada pela letra "S"; \textit{Long-haul Interoffice Connections}, representada pela letra "L" e corresponde a distância de 40 km para o comprimento de onda 1330 nm e 80 km para 1
+Na Figura~\ref{fig:PhysicalSDH}, a primeira coluna referencia a taxa de transmissão de acordo com a hierarquia \ac{SDH}. A segunda coluna introduz uma nomenclatura que depende do comprimento do enlace, de acordo com as definições a seguir: \textit{Intraoffice Connections} é representado pela letra "I" e indica distâncias de aproximadamente 2 km; \textit{Short-haul Interoffice Connections}, que indica enlaces de distância de aproximadamente 15 km para o comprimento de onda de 1310 nm e 40 km para comprimento de onda de 1550 nm, é representada pela letra "S"; \textit{Long-haul Interoffice Connections}, representada pela letra "L" e corresponde a distância de aproximadamente 40 km para o comprimento de onda de 1310 nm e 80 km para o comprimento de onda de 1550 nm; \textit{Very-long-haul Interoffice Connections}, indicado pela letra "V" correspondendo a distância de aproximadamente 60 km para comprimento de onda de 1310 nm e 120 km para comprimento de onda de 1550 nm; \textit{Ultra-long-haul Interoffice Connections}, representado pela letra "U" e correspondendo a distâncias aproximadas de 160 km. O primeiro número após as letras indicam a qual hierarquia se está relacionando e o segundo número indica o tipo de fibra e comprimento de onda de operação: 1 indica operação em 1310 nm sobre \textit{Standard Single-Mode Fiber} (\ac{ITU-T} G.652), 2 indica operação em 1550 nm sobre \textit{Standard Single-Mode Fiber} (\ac{ITU-T} G.652), 3 indica operação em 1550 nm sobre \textit{Dispersion-shifted Fiber} (\ac{ITU-T} G.653) e 5 indica operação em 1550 nm e sobre \textit{Nonzero Dispersion-shifted Fiber} (\ac{ITU-T} G.655)~\cite{Ramaswami2010}. 
+
+As outras colunas especificam o comprimento de onda de operação do transmissor, que pode ser em 1310 nm ou 1550 nm, o tipo de fibra óptica a se utilizar, que pode ser \textit{Standard Single-Mode Fiber} (\ac{ITU-T} G.652), \textit{Dispersion-shifted Fiber} (\ac{ITU-T} G.653) e \textit{Nonzero Dispersion-shifted Fiber} (\ac{ITU-T} G.655), o range de perda aceitável, os tipos de transmissores, que podem ser \ac{LED}, \ac{MLM} ou \ac{SLM} e o range de dispersão aceitável. É interessante ressaltar que ambos os ranges aceitáveis de perda e dispersão são ditados pela aplicação.
+ 
 
 
 
